github_data_collector/src/data/issue_comment/dmotz_natal.txt
These are required deps and versions: 

``` sh
natal init TestApp --interface om-next
Creating TestApp

Creating Leiningen project
Updating Leiningen project
Creating React Native skeleton
```

```
❯ node -v
v4.2.1

❯ npm -v 
2.14.7

❯ lein -v 
Leiningen 2.5.3 on Java 1.8.0_66 Java HotSpot(TM) 64-Bit Server VM

❯ react-native -v
0.1.7

❯ pod --version                                
0.39.0

❯ watchman --version
4.1.0
```

Is this by design?  Ideally I'd like to be able to make a change in any namespace and have it hot reloaded in my simulator.  Is that possible?

i tried following similar steps to my wiki entry for emacs/cider but i wasn't able to succeed.  i can connect but I can't eval the entire core.cljs file without error.

does anyone have experience trying this?  I'll keep tinkering and report back.

I was changing source to cause the recompiles below. The problem is right near the end when I did `:cljs/quit`:

```
orion:Desktop mfikes$ cd foo-bar/
orion:foo-bar mfikes$ natal repl
Starting REPL

[1] FooBar on iPhone (orion)

Connecting to FooBar on iPhone (orion) ...

Watch compilation log available at: /Volumes/Ambly-81C53995/watch.log
To quit, type: :cljs/quit
cljs.user=> 
Change detected, recompiling ...
Compiling src/foo_bar/core.cljs
... done. Elapsed 0.227945639 seconds
cljs.user=> 
Change detected, recompiling ...
Compiling src/foo_bar/core.cljs
... done. Elapsed 0.246729621 seconds
cljs.user=> 
Change detected, recompiling ...
Compiling src/foo_bar/core.cljs
... done. Elapsed 0.226943097 seconds
cljs.user=> 
Change detected, recompiling ...
Compiling src/foo_bar/core.cljs
... done. Elapsed 0.230004402 seconds
cljs.user=> 
Change detected, recompiling ...
Compiling src/foo_bar/core.cljs
... done. Elapsed 0.217352472 seconds
cljs.user=> 
Change detected, recompiling ...
Compiling src/foo_bar/core.cljs
... done. Elapsed 0.227829238 seconds
cljs.user=> 
Change detected, recompiling ...
Compiling src/foo_bar/core.cljs
... done. Elapsed 0.475395289 seconds
cljs.user=> 3
3
cljs.user=> 3
3
cljs.user=> :cljs/quit
fs.js:1236
    throw error;
    ^

Error: watch /Volumes/Ambly-81C53995/watch.log ENOENT
  at exports._errnoException (util.js:874:11)
  at FSWatcher.start (fs.js:1234:19)
  at Object.fs.watch (fs.js:1262:11)
  at Tail.watch (/usr/local/lib/node_modules/natal/node_modules/tail/tail.js:83:32)
  at [object Object]._onTimeout (/usr/local/lib/node_modules/natal/node_modules/tail/tail.js:115:22)
  at Timer.listOnTimeout (timers.js:92:15)

orion:foo-bar mfikes$ 
```

I'm running into the following issue when trying to get started with Natal:

```
$ natal init nadal
Creating nadal

Creating Leiningen project
Updating Leiningen project
Creating React Native skeleton
Installing Pod dependencies
Updating Xcode project
Creating Natal config
Compiling ClojureScript
Compiling Xcode project
Command failed: xcodebuild -workspace native/ios/nadal.xcworkspace -scheme nadal -destination platform='iOS Simulator',OS=latest,id='DE89AB75-4E0B-4607-BD4F-3B145565C343' test
```

I'm running
Node 4.2.2 and XCode 7.1, Watchman 3.3.

When the command fails, I get

```
/.../nadal/native/node_modules/react-native/local-cli/cli.js:56
  const setupEnvScript = /^win/.test(process.platform)
  ^^^^^
SyntaxError: Use of const in strict mode.
    at exports.runInThisContext (vm.js:73:16)
    at Module._compile (module.js:443:25)
    at Object.Module._extensions..js (module.js:478:10)
    at Module.load (module.js:355:32)
    at Function.Module._load (module.js:310:12)
    at Function.Module.runMain (module.js:501:10)
    at startup (node.js:129:16)
    at node.js:814:3
Process terminated. Press <enter> to close the window
```

```
codebuild -workspace native/ios/NatalTest.xcworkspace -scheme NatalTest -destination platform='iOS Simulator',OS=latest,id='DFAD3D65-1F5C-4380-921A-4EEEB3F3D53E' test
```

Gives:

```
[...]
=== BUILD TARGET NatalTestTests OF PROJECT NatalTest WITH CONFIGURATION Debug ===

Check dependencies

Nov 22 22:10:21  NatalTest[43339] <Error>: CGContextSaveGState: invalid context 0x0. If you want to see the backtrace, please set CG_CONTEXT_SHOW_BACKTRACE environmental variable.
Nov 22 22:10:21  NatalTest[43339] <Error>: CGContextTranslateCTM: invalid context 0x0. If you want to see the backtrace, please set CG_CONTEXT_SHOW_BACKTRACE environmental variable.
Nov 22 22:10:21  NatalTest[43339] <Error>: CGContextRestoreGState: invalid context 0x0. If you want to see the backtrace, please set CG_CONTEXT_SHOW_BACKTRACE environmental variable.
2015-11-22 22:10:21.752 [error][tid:main][RCTBatchedBridge.m:436] Error while loading: Cannot find entry file index.ios.js in any of the roots: ["/Users/martinb/dev/spikes/natal-test/native"]
Test Suite 'All tests' started at 2015-11-22 22:10:22.041
Test Suite 'NatalTestTests.xctest' started at 2015-11-22 22:10:22.042
Test Suite 'NatalTestTests' started at 2015-11-22 22:10:22.043
Test Case '-[NatalTestTests testRendersWelcomeScreen]' started.
/Users/martinb/dev/spikes/natal-test/native/ios/NatalTestTests/NatalTestTests.m:66: error: -[NatalTestTests testRendersWelcomeScreen] : ((foundElement) is true) failed - Couldn't find element with text 'Welcome to React Native!' in 240 seconds
Test Case '-[NatalTestTests testRendersWelcomeScreen]' failed (240.055 seconds).
Test Suite 'NatalTestTests' failed at 2015-11-22 22:14:22.100.
     Executed 1 test, with 1 failure (0 unexpected) in 240.055 (240.057) seconds
Test Suite 'NatalTestTests.xctest' failed at 2015-11-22 22:14:22.101.
     Executed 1 test, with 1 failure (0 unexpected) in 240.055 (240.058) seconds
Test Suite 'All tests' failed at 2015-11-22 22:14:22.101.
     Executed 1 test, with 1 failure (0 unexpected) in 240.055 (240.060) seconds
** TEST FAILED **
```

Please let me know what additional information is going to be useful.

Got the following popup when running:

natal init FutureApp --interface om-next

/Users/don/src/react-native/future-app/native/node_modules/react-native/packager/packager.js:15
const fs = require('fs');
^^^^^
SyntaxError: Use of const in strict mode.
    at Module._compile (module.js:439:25)
    at Object.Module._extensions..js (module.js:474:10)
    at Module.load (module.js:356:32)
    at Function.Module._load (module.js:312:12)
    at Function.Module.runMain (module.js:497:10)
    at startup (node.js:119:16)
    at node.js:906:3
Process terminated. Press <enter> to close the window
# 

Resulting in this in the terminal:

$ natal init FutureApp --interface om-next
Creating FutureApp

Creating Leiningen project
Updating Leiningen project
Compiling ClojureScript
Creating React Native skeleton
Installing Pod dependencies
Updating Xcode project
Creating Natal config
Compiling Xcode project
Command failed: xcodebuild -workspace native/ios/FutureApp.xcworkspace -scheme FutureApp -destination platform='iOS Simulator',OS=latest,id='C805F622-C03C-47C1-8AF1-BF08FC33760A' test

(I've been doing little "spike" projects to get the feel of different features and components.  There's a gotcha when you do this.  I'm noting here in case it helps someone else.)

I expect to be able to switch between two natal based projects by stopping the Simulator, switching to different directory and running "natal launch && natal repl" but this leads to an "Invariant Violation: Application XX has not been registered" when opening second project.

The solution seems to be to close the React Packager terminal window.

This might well not be a natal issue but perhaps it is possible to ensure projects don't overlap from React Packager's perspective.

(love your work)

If I press Ctrl+Cmd+Z and enable Chrome Debugging, I get the default "Welcome to React Native!" page in the simulator, and it seems I am not running the Om-driven app anymore.

Shouldn't it be possible to use the Chrome Debugger exactly as I do in regular Om apps (with source mapping and everything)?

Really excited about Natal! I'm wondering if perhaps the versioning is out of sync, because I see the name of my app flash briefly, then briefly the instructions from `index.io.js`, and then a white screen. Just opening this up for now in case there might be an obvious cause, I'll keep debugging in the meantime.
